--- a/src/templates/catalog.css
+++ b/src/templates/catalog.css
@@ -1,4 +1,4 @@
-.css-toc {
+/* .css-toc {
     padding: 15px;
     margin-bottom: 25px;
 }
@@ -29,21 +29,45 @@
 
 .css-toc ul li>p {
     margin-top: 0;
-}
+} */
 
 @media screen and (min-width: 1045px) {
     .css-toc {
         position: fixed;
-        bottom: 0;
-        right: 0;
-        width: 200px;
-        max-height: 600px;
-        overflow: scroll;
+        top: 90px;
+        right: 5px;
+        width: 220px;
+        max-height: 500px;
+        overflow-y: scroll;
         font-size: 14px;
 
+
     }
 
-    .css-toc li>ul {
-        margin-left: 1rem;
+    /*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/
+    .css-toc ::-webkit-scrollbar {
+        width: 7px;
+        height: 7px;
+        background-color: #f5f5f5;
     }
+
+    /*定义滚动条轨道 内阴影+圆角*/
+    .css-toc ::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        border-radius: 10px;
+        background-color: #f5f5f5;
+    }
+
+    /*定义滑块 内阴影+圆角*/
+    .css-toc ::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+        background-color: #c8c8c8;
+    }
+
+    /* .css-toc li>ul {
+        margin-left: 1rem;
+    } */
 }
