--- a/src/templates/catalog.css
+++ b/src/templates/catalog.css
@@ -71,3 +71,10 @@
         margin-left: 1rem;
     } */
 }
+
+@media screen and (max-width: 1045px) {
+    .css-toc {
+        display: none
+    }
+
+}
