--- a/src/utils/global.css
+++ b/src/utils/global.css
@@ -21,6 +21,8 @@ body.light {
   --linkBackground: rgba(187, 239, 253, 0.3);
   --linkBorder: rgba(0, 0, 0, 0.2);
   --pagination-bg: #f7a046;
+  --scrollbar-bg: #f5f5f5;
+  --scrollbar-cl: #c5c3c3;
 }
 
 body.dark {
@@ -39,6 +41,8 @@ body.dark {
   --breadcrumbsTextColor: #d1c4e9;
   --breadcrumbsTextColorActive: #eeeeee;
   --pagination-bg: rgb(143, 91, 35);
+  --scrollbar-bg: #373c49;
+  --scrollbar-cl: #20232b;
 }
 
 a {
@@ -106,7 +110,7 @@ pre[class*='language-'] ::selection {
 }
 
 /* Inline code */
-:not(pre) > code[class*='language-'] {
+:not(pre)>code[class*='language-'] {
   border-radius: 0.3em;
   background: var(--inlineCode-bg);
   color: var(--inlineCode-text);
