--- a/src/templates/catalog.css
+++ b/src/templates/catalog.css
@@ -10,7 +10,7 @@
         right: 5px;
         width: 200px;
         max-height: 500px;
-        overflow-y: scroll;
+        overflow-y: auto;
         font-size: 14px;
         color: #f7a046;
     }
